--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   backend:
     build:
       context: .
+      dockerfile: Dockerfile.dev
     image: backend
     ports:
       - "8000:8000"
