--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -20,7 +20,7 @@ services:
       dockerfile: Dockerfile.dev
     image: backend:1.0.0
     volumes:
-      - "./backend/todos:/app/todos"
+      - "${PWD}/backend/todos:/app/todos"
     networks:
       - internal
 
@@ -29,7 +29,7 @@ services:
     working_dir: /app
     command: "npm run dev -- --host"
     volumes:
-      - "./client:/app"
+      - "${PWD}/client:/app"
     networks:
       - internal
 
