--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -6,6 +6,9 @@ http {
 
         location / {
             proxy_pass http://client:5173;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
