--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,23 @@ services:
     networks:
       - internal
 
+  db:
+    image: postgres:15
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: monmotdepasse
+      POSTGRES_DB: todosdb
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - internal
+
+volumes:
+  postgres_data:
+
 networks:
   internal:
     driver: bridge
